[package]
name = "binance"
version = "0.1.0"
edition = "2021"


[dependencies]
futures-util = "0.3"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
binance-rs-async = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.6"
warp = "0.3"
tokio-tungstenite = "0.26.1"
chrono = "0.4"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
kraken-async-rs = "0.7.0"
tracing = "0.1.27"
tokio-stream = "0.1"
tokio-util = "0.7"